--- a/e2e_samples/parking_sensors_synapse/devops/azure-pipelines-cd-release.yml
+++ b/e2e_samples/parking_sensors_synapse/devops/azure-pipelines-cd-release.yml
@@ -53,21 +53,21 @@ stages:
   # Integration tests
   - template: templates/jobs/integration-tests-job.yml
 
-- stage: deploy_to_prod
-  displayName: 'Deploy to Prod'
-  variables:
-  - group: mdwdops-release-prod
-  - group: mdwdops-secrets-prod
-  jobs: 
-  - template: templates/jobs/deploy-dedicated-sql-pool-job.yml
-    parameters:
-      environmentName: 'PROD'
-      serviceConnection: 'mdwdops-serviceconnection-prod'
-  - template: templates/jobs/deploy-wheel-job.yml
-    parameters:
-      environmentName: 'PROD'
-      serviceConnection: 'mdwdops-serviceconnection-prod'
-  - template: templates/jobs/deploy-synapse-workspace-job.yml
-    parameters:
-      environmentName: 'PROD'
-      serviceConnection: 'mdwdops-serviceconnection-prod'
+# - stage: deploy_to_prod
+#   displayName: 'Deploy to Prod'
+#   variables:
+#   - group: mdwdops-release-prod
+#   - group: mdwdops-secrets-prod
+#   jobs: 
+#   - template: templates/jobs/deploy-dedicated-sql-pool-job.yml
+#     parameters:
+#       environmentName: 'PROD'
+#       serviceConnection: 'mdwdops-serviceconnection-prod'
+#   - template: templates/jobs/deploy-wheel-job.yml
+#     parameters:
+#       environmentName: 'PROD'
+#       serviceConnection: 'mdwdops-serviceconnection-prod'
+#   - template: templates/jobs/deploy-synapse-workspace-job.yml
+#     parameters:
+#       environmentName: 'PROD'
+#       serviceConnection: 'mdwdops-serviceconnection-prod'
